# fitapp_backend

./: .env.example  .gitignore  Dockerfile  Readme.MD  docker-compose.yaml  pyproject.toml
fitapp_api/: main.py  misc.py
fitapp_api/gps/: db.py  models.py  router.py  utils.py  utlis.py
fitapp_api/postgres/: db.py
fitapp_api/reminders/: models.py  router.py  utils.py
fitapp_api/statistics/: models.py  router.py
fitapp_api/trips/: enums.py  models.py  router.py  utils.py
fitapp_api/users/: models.py  router.py
fitapp_api/users.py/: models.py
