[project]
name = "fitapp-api"
version = "0.1.0"
description = "Backend dla aplikacji FitApp"
authors = [
    {name = "Iga",email = "bucz1991@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode=false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

