[tool.poetry]
name = "fitapp-api"
version = "0.1.0"
description = "Backend API dla aplikacji FitApp"
authors = ["Iga Buczyńska <bucz1991@gmail.com>", "Marcin Królak <marcin_krolak@op.pl>"]

[tool.poetry.dependencies]
python = "^3.12.7"
sqlmodel = ">=0.0.24,<0.0.25"
uvicorn = ">=0.34.2,<0.35.0"
fastapi = ">=0.115.12,<0.116.0"
dotenv = ">=0.9.9,<0.10.0"
asyncpg = ">=0.30.0,<0.31.0"
questdb = ">=2.0.4,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"